z-index fix + hide double arrow

--- a/sass/card.scss
+++ b/sass/card.scss
@@ -59,6 +59,7 @@
     left: 14px;
 
     &--double-arrow {
+      display: none;
       left: 90px;
     }
   }
