--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -130,6 +130,7 @@
     border: none;
     font-size: $font-size-m;
     font-family: $font-family-bold;
+    z-index: 99999;
 
     @media (min-width: $screen-s) {
       top: 464px;
@@ -164,6 +165,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(51,51,51,0.50);
+  z-index: 9999;
 }
 
 .gaussian {
