--- a/sass/section-main.scss
+++ b/sass/section-main.scss
@@ -31,5 +31,6 @@
 
   &__carousel {
     grid-area: card;
+    width: 100%;
   }
 }
